--- a/style/style.css
+++ b/style/style.css
@@ -15,3 +15,29 @@ img{
 #sales-page{
     background-color: beige;
 }
+#content{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+}
+nav{
+    top: 0;
+    left: 0;
+    position: fixed;
+    width: 100%;
+    height: 50px;
+    background-color: darkgrey;
+}
+nav a{
+    float: left;
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px;
+    text-decoration: none;
+    
+}
+#about{
+    text-align: center;
+}
