fixed nav issue

--- a/style/style.css
+++ b/style/style.css
@@ -41,3 +41,10 @@ nav a{
 #about{
     text-align: center;
 }
+#table{
+    margin-top: 100px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+}
